# fastapi-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.codex/environments/: environment.toml
app/: dependencies.py  factory.py  main.py
app/adapters/api/v1/routers/: __init__.py  health.py  user.py
app/application/dto/: user.py
app/application/mappers/: base.py  registry.py  user_mapper.py
app/core/: security.py
app/domain/entities/: user.py
app/domain/mappers/: base.py  registry.py  user_mapper.py
app/domain/repositories/: base_repository.py  user_repository.py
app/domain/schemas/: user.py
app/infrastructure/: config.py  logging.py  security.py
app/infrastructure/database/: connector.py
app/infrastructure/database/models/: __init__.py  base.py  user.py
app/infrastructure/database/repositories/: base_repository_impl.py  user_repository.py
app/infrastructure/database/types/: encrypted_column.py
app/infrastructure/logging/: __init__.py  base_logger.py  custom_logger.py
config/: app.conf  connection.conf
tests/: conftest.py  test_config.py  test_user_routes.py
