[project]
name = "template-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "sqlalchemy>=2.0.41",
    "psycopg[binary]>=3.3.0",
    "pydantic==2.12.0",
    "pydantic-settings==2.12.0",
    "email-validator==2.3.0",
    "alembic==1.18.3",
    "python-dotenv==1.0.0",
    "requests==2.32.5",
    "python-multipart==0.0.22",
    "coloredlogs==15.0.1",
    "argon2-cffi==25.1.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "mypy==1.19.1",
    "factory-boy==3.3.3",
    "httpx==0.28.1",
    "greenlet>=3.3.1",
    "ruff==0.12.1",
    "isort==6.0.1",
    "pre-commit==4.3.0",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
